# OpenPRIME

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/prime-api/: Cargo.toml
crates/prime-api/src/: handlers.rs  lib.rs  middleware.rs  router.rs  state.rs
crates/prime-api/src/dashboard/: index.html  mod.rs
crates/prime-channels/: Cargo.toml
crates/prime-channels/src/: adapter.rs  cli.rs  discord.rs  lib.rs  message.rs  telegram.rs  webhook.rs
crates/prime-cli/: Cargo.toml
crates/prime-cli/src/: commands.rs  main.rs  output.rs
crates/prime-kernel/: Cargo.toml
crates/prime-kernel/src/: budget.rs  config.rs  error.rs  lib.rs  lifecycle.rs  orchestrator.rs  rbac.rs  scheduler.rs
crates/prime-memory/: Cargo.toml
crates/prime-memory/migrations/: 001_init.sql
crates/prime-memory/src/: error.rs  lib.rs  profile.rs  search.rs  session.rs  store.rs
crates/prime-runtime/: Cargo.toml
crates/prime-runtime/src/: agent.rs  error.rs  lib.rs  llm.rs  loop_runner.rs  tools.rs
crates/prime-scheduler/: Cargo.toml
crates/prime-scheduler/src/: error.rs  lib.rs  runner.rs  store.rs  task.rs
crates/prime-skills/: Cargo.toml
crates/prime-skills/src/: engine.rs  error.rs  hub.rs  learner.rs  lib.rs  writer.rs
crates/prime-swarm/: Cargo.toml
crates/prime-swarm/src/: coordinator.rs  error.rs  lib.rs  merger.rs  router.rs  task.rs
docs/: ARCHITECTURE.md
scripts/: install.sh
