[workspace]
resolver = "2"
members = [
    "crates/prime-kernel",
    "crates/prime-runtime",
    "crates/prime-swarm",
    "crates/prime-skills",
    "crates/prime-memory",
    "crates/prime-channels",
    "crates/prime-cli",
    "crates/prime-api",
    "crates/prime-scheduler",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["OpenPRIME Contributors"]
license     = "MIT"
repository  = "https://github.com/your-org/OpenPRIME"

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
thiserror    = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx         = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "migrate", "json"] }
axum         = { version = "0.7", features = ["ws"] }
reqwest      = { version = "0.11", features = ["json", "stream"] }
clap         = { version = "4", features = ["derive", "env"] }
uuid         = { version = "1", features = ["v4", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
futures      = "0.3"
async-trait  = "0.1"
dashmap      = "5"
sha2         = "0.10"
hmac         = "0.12"
rand         = "0.8"
dirs         = "5"
toml         = "0.8"
