[package]
name    = "prime-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "prime"
path = "src/main.rs"

[dependencies]
tokio.workspace          = true
serde.workspace          = true
serde_json.workspace     = true
anyhow.workspace         = true
thiserror.workspace      = true
tracing.workspace        = true
tracing-subscriber.workspace = true
uuid.workspace           = true
chrono.workspace         = true
clap.workspace           = true
dirs.workspace           = true
prime-kernel             = { path = "../prime-kernel" }
prime-runtime            = { path = "../prime-runtime" }
prime-swarm              = { path = "../prime-swarm" }
prime-skills             = { path = "../prime-skills" }
prime-memory             = { path = "../prime-memory" }
prime-channels           = { path = "../prime-channels" }
prime-api                = { path = "../prime-api" }
axum.workspace           = true
reqwest.workspace        = true
prime-scheduler          = { path = "../prime-scheduler" }
