[package]
name    = "prime-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace       = true
serde.workspace       = true
serde_json.workspace  = true
anyhow.workspace      = true
thiserror.workspace   = true
tracing.workspace     = true
uuid.workspace        = true
chrono.workspace      = true
async-trait.workspace = true
dashmap.workspace     = true
dirs.workspace        = true
toml.workspace        = true
